Made more items in users and professional table lead to show page, from feedback in UAT

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -66,7 +66,7 @@
         <tbody>
           <% @users.each do |user| %>
             <tr class="users-table-rows">
-              <td class="profile-td">
+              <td class="profile-td" onclick="window.location='<%= user_path(user) %>'">
                 <%= image_tag(
                   user.profile_image_url.presence || asset_path('profile-placeholder.png'),
                   alt: "Profile image",
@@ -74,8 +74,8 @@
                   onerror: "this.onerror=null; this.src='#{asset_path('profile-placeholder.png')}';"
                 ) %>
               </td>
-              <td><%= user.first_name %></td>
-              <td><%= user.last_name %></td>
+              <td onclick="window.location='<%= user_path(user) %>'"><%= user.first_name %></td>
+              <td onclick="window.location='<%= user_path(user) %>'"><%= user.last_name %></td>
               <td><%= user.email %></td>
               <td><%= user.DOB %></td>
               <td><%= user.phone_number %></td>
