Made professionals style the same as users style. These pages are almost identical but they are defined twice, which violates the DRY principle.  Need to fix in the future.

--- a/app/assets/stylesheets/professionals.css
+++ b/app/assets/stylesheets/professionals.css
@@ -33,15 +33,33 @@ th {
   padding: 5px;
 }
 
-input {
+input[type=text] {
   border: 2px solid var(--accent-color);
   border-radius: 4px;
 }
 
-input:focus {
+input[type=text]:focus {
   background-color: var(--accent-color);
 }
 
 .submit-button {
   border: none;
+}
+
+/* Profile card */
+.profile-container {
+  background-color: transparent;
+}
+
+.profile-card {
+  background-color: var(--surface-color);
+  padding: 20px;
+  border-radius: 8px;
+  border: 1px solid #ddd;
+}
+
+.profile-card-link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
 }
