--- a/app/views/professionals/edit.html.erb
+++ b/app/views/professionals/edit.html.erb
@@ -2,11 +2,11 @@
 <%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
 
 <div class="flex flex-col items-center justify-center">
-  <h1 class="text-2xl m-auto font-bold p-4">Editing an Existing User</h1>
+  <h1 class="text-2xl m-auto font-bold p-4">Editing an Existing Professional</h1>
 </div>
 
 <%= render 'form', professional: @professional %>
 
-<div class="flex flex-col items-center justify-center">
+<div class="flex flex-col items-center justify-center p-8">
   <%= link_to 'Cancel', professionals_path, class: "blue-button p-4 mb-4 rounded-md bg-[var(--surface-color)]" %>
 </div>
