--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,14 @@
     
     <%= render 'layouts/header' %> <!-- Include the header partial -->
 
-    <% flash.each do |key, message| %>
-      <div class="alert alert-<%= key %>"><%= message %></div>
-    <% end %>
-
+    <% if flash.present? %>
+      <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
+        <% flash.each do |key, message| %>
+          <div class="alert alert-<%= key %>"><%= message %></div>
+        <% end %>
+      </div>
+    <% end %>   
+    
     <%= yield %>
 
     <%= render 'layouts/footer' %> <!-- Include the footer partial -->
