--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -87,3 +87,29 @@
 .gray-button:not(:hover) {
   transition: background-color 1s;
 }
+
+/* Forms */
+.field {
+  padding: 5px;
+}
+
+input[type=text], input[type=password], textarea {
+  border: 2px solid var(--accent-color);
+  border-radius: 4px;
+}
+
+input[type=text]:focus, input[type=password]:focus, textarea:focus {
+  background-color: var(--accent-color-weak);
+}
+
+/* General table style */
+th, td {
+  padding: 15px;
+  text-align: left;
+}
+
+/* Table header */
+th {
+  border-bottom: 1px solid #ddd;
+  color: var(--text-color);
+}
