--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,18 +4,20 @@
   <div class="absolute w-max-screen h-screen pt-32"></div>
 
   <!-- Centered content -->
-  <div class="relative flex items-center justify-center h-full flex-col">
-    <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
-      Physicians and Mentors
-    </h1>
-    <p class="text-2xl md:text-4xl text-white font-light pb-[32px]">
+  <div class="grid h-screen place-items-center">
+    <div class="relative flex items-center justify-center h-full flex-col">
+      <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
+        Physicians and Mentors
+      </h1>
+      <p class="text-2xl md:text-4xl text-white font-light pb-[32px]">
 
-      Welcome Back, (Admin) <%= session[:first_name] %> <%= session[:last_name] %> !
-    </p>
+        Welcome Back, (Admin) <%= session[:first_name] %> <%= session[:last_name] %> !
+      </p>
 
-    <nav>
-     <%= link_to "View Users", users_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white font-semibold hover:text-white p-4 text-3xl border border-white rounded" %>
-    </nav>
+      <nav>
+      <%= link_to "View Users", users_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white font-semibold hover:text-white p-4 text-3xl border border-white rounded" %>
+      </nav>
+    </div>
   </div>
 
 
@@ -30,14 +32,16 @@
   <div class="absolute w-max-screen h-screen pt-32"></div>
 
   <!-- Centered content -->
-  <div class="relative flex items-center justify-center h-full flex-col">
-    <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
-      Physicians and Mentors
-    </h1>
-    <p class="text-2xl md:text-4xl text-white font-light">
+  <div class="grid h-screen place-items-center">
+    <div class="relative flex items-center justify-center h-full flex-col">
+      <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
+        Physicians and Mentors
+      </h1>
+      <p class="text-2xl md:text-4xl text-white font-light">
 
-      Welcome back!
-    </p>
+        Welcome back!
+      </p>
+    </div>
   </div>
 
 </div>
@@ -49,20 +53,22 @@
   <div class="absolute w-max-screen h-screen pt-32"></div>
 
   <!-- Centered content -->
-  <div class="relative flex items-center justify-center h-full flex-col">
-    <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
-      Physicians and Mentors
-    </h1>
-    <p class="text-2xl md:text-4xl text-white font-light">
-      A community of students connecting with professionals
-    </p>
-    <div class="flex justify-center text-white mt-[32px]">
-      <nav>
-        <%= link_to "Login", login_path, class: "hover:text-gray-300 text-lg bg-transparent text-white font-semibold hover:text-white mx-8 p-4 text-3xl border border-white rounded" %>
-      </nav>
-      <nav>
-        <%= link_to "Sign Up", signup_path, class: "hover:text-gray-300 text-lg bg-transparent  text-white font-semibold hover:text-white mx-8 p-4 text-3xl border border-white rounded" %>
-      </nav>
+  <div class="grid h-screen place-items-center">
+    <div class="relative flex items-center justify-center h-full flex-col">
+      <h1 class="text-4xl md:text-6xl text-white font-bold mt-[32px]">
+        Physicians and Mentors
+      </h1>
+      <p class="text-2xl md:text-4xl text-white font-light">
+        A community of students connecting with professionals
+      </p>
+      <div class="flex justify-center text-white mt-[32px] p-8">
+        <nav>
+          <%= link_to "Login", login_path, class: "accent-button p-4 rounded-md bg-[var(--surface-color)] mx-8" %>
+        </nav>
+        <nav>
+          <%= link_to "Sign Up", signup_path, class: "accent-button p-4 rounded-md bg-[var(--surface-color)] mx-8" %>
+        </nav>
+      </div>
     </div>
   </div>
 
