Add help page description for posts

--- a/app/views/home/help.html.erb
+++ b/app/views/home/help.html.erb
@@ -12,7 +12,7 @@
   <h3>Admin View</h3>
 
   <p>
-    The admin can view all users on the user table.  The admin can also edit user information, delete users, and add new users.  Each row in the user table correspond to a user.  There are actions for showing, editing, and deleting.  Clicking on the show button loads the user’s profile page.
+    The admin can view all users on the user table.  The admin can also edit user information, delete users, and add new users.  Each row in the user table correspond to a user.  There are actions for showing, editing, and deleting.  Clicking on the show button loads the user’s profile page.  Clicking the column title sorts the rows with the column.  For example, clicking “Last Name” sorts the users by last name.
   </p>
 
   <h3>Adding New Users</h3>
@@ -38,6 +38,21 @@
   <p>
     You can manually type in a user’s first name and similar results will appear. For example, if you fill out “Kyl”, users with the names “Kyle”, “Kylie”, and “Kyla” will appear. You can also filter them based on whether they are professionals or not. First you click “Pick a Filter Option” then select “Filter by Professional” then you can select whether you want to filter by “Professional” or “Not professional”. In the future, a specialization filter will be added for professionals.
   </p>
+
+  <h2>Posts</h2>
+
+  <h3>All Posts</h3>
+
+  <p>
+    To view all posts, click the “View Posts” button on the header navigation bar.  Here, all the posts will be shown.  The title, specialties, author, post date, and a preview of the description for each post are shown.  Clicking on the title of a post will show the full post.
+  </p>
+
+  <h3>Adding a New Post</h3>
+
+  <p>
+    Click “Create New Post” from the all posts page.  There will be a prompt for the post title, content (description), and specialties.  Fill out these fields and click “Create Post” to create the post.  Alternatively, click “Cancel” to cancel and go back.
+  </p>
+
 </div>
 
 <%= link_to 'Home', home_path %>
