--- a/app/views/specialties/new.html.erb
+++ b/app/views/specialties/new.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
 
 <div class="flex flex-col items-center justify-center">
   <h1 class="text-2xl m-auto font-bold p-4">Creating a New Specialty</h1>
