--- a/app/views/specialties/index.html.erb
+++ b/app/views/specialties/index.html.erb
@@ -1,49 +1,41 @@
-<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= stylesheet_link_tag 'users', media: 'all', data: { turbolinks: false } %>
-
+<%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
+<%= stylesheet_link_tag 'users', media: 'all', data: { turbo: false } %>
 
 <div class="text-white">
-
-  <h1>All Specialties</h1>
-  <p>Find me in app/views/specialties/index.html.erb</p>
+  <h1 class="text-2xl font-bold text-center my-6">All Specialties</h1>
 
   <% if notice.present? %>
     <div class="flex flex-col items-center justify-center rounded-lg p-10 m-10 w-80/100 mx-auto bg-[var(--accent-color)]">
-      <h1 id="notice"><%= notice %></p>
+      <h1 id="notice"><%= notice %></h1>
     </div>
   <% end %>
 
   <div class="flex flex-row justify-between m-4 w-80/100 mx-auto">
-    <%= link_to 'New Specialty', new_specialty_path, class: "flex items-center justify-center blue-button p-2 w-10/100 rounded-md bg-[var(--surface-color)]" %>
+    <%= link_to 'New Specialty', new_specialty_path, class: "px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 transition" %>
   </div>
-
 
   <div class="flex flex-col items-center justify-center">
     <div class="w-80/100 bg-[var(--surface-color)] rounded-md">
       <table id="users-table" class="w-full">
         <thead>
           <tr>
-            <th onclick="sortTable(0)" class="w-5/100"></th>
-            <th onclick="sortTable(0)" class="sortable-header w-20/100">Name</th>
+            <th class="w-5/100"></th>
+            <th class="sortable-header w-20/100">Name</th>
             <th colspan="3">Actions</th>
           </tr>
         </thead>
 
         <tbody>
-          <% @specialty.each do |specialty| %>
+          <% @specialties.each do |specialty| %>
             <tr class="users-table-rows">
               <td><%= specialty.name %></td>
-              <td><%= link_to 'Show', specialty, class: "blue-button p-2 rounded-md" %></td>
-              <td><%= link_to 'Edit', edit_specialty_path(specialty), class: "blue-button p-2 rounded-md" %></td>
-              <td><%= link_to 'Destroy', confirm_destroy_user_path(user), class: "red-button p-2 rounded-md " %></td>
+              <td><%= link_to 'Show', specialty, class: "blue-button p-2 rounded-md bg-blue-500 hover:bg-blue-600 transition text-white" %></td>
+              <td><%= link_to 'Edit', edit_specialty_path(specialty), class: "blue-button p-2 rounded-md bg-yellow-500 hover:bg-yellow-600 transition text-white" %></td>
+              <td><%= link_to 'Destroy', confirm_destroy_specialty_path(specialty), class: "red-button p-2 rounded-md bg-red-500 hover:bg-red-600 transition text-white" %></td>
             </tr>
           <% end %>
         </tbody>
       </table>
     </div>
-    
-    <%= link_to 'New Specialty', new_specialty_path, class: "blue-button p-4 m-4 rounded-md bg-[var(--surface-color)]" %>
   </div>
-
-  <br>  
 </div>
